# telecom-billing-agentic-ai

./: .env.example  .gitignore  30_MIN_DEMO_RUNBOOK.md  DEMO_RUNBOOK.md  RAG_CONFIGURATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  graph.py  ingest.py  ingest_wiki.py
app/agents/: __init__.py  billing.py  manager.py  sales.py
app/chunking/: __init__.py  base.py  fixed_size.py  recursive.py  semantic.py
app/evaluation/: __init__.py  eval_runner.py  report.py
app/memory/: __init__.py  entity_extractor.py  session_store.py
app/rag/: __init__.py  pdf_loader.py  pinecone_store.py  retriever.py
app/utils/: __init__.py  guardrails.py  logging.py
data/: eval_queries.txt  sessions.db  sessions.db-shm  sessions.db-wal
data/docs/: DOC_10_CUSTOMER_PROFILE_JOHN_004.txt  DOC_2_BILLING_FAQ.txt  DOC_6_CUSTOMER_PROFILE_SATHISH_002.txt  DOC_7_INVOICE_JAN_2026_SATHISH_002.txt
data/docs/txt_backup/: DOC_11_INVOICE_JAN_2026_JOHN_004.txt  DOC_1_PLANS_AND_PRICING.txt  DOC_3_CUSTOMER_PROFILE_DILEEP_DEMO_001.txt  DOC_4_INVOICE_JAN_2026_DILEEP_DEMO_001.txt  DOC_5_POLICIES_DISPUTE_LATEFEES.txt  DOC_8_CUSTOMER_PROFILE_SURESH_003.txt  DOC_9_INVOICE_JAN_2026_SURESH_003.txt
data/docs/wikipedia/: 5G_NR.txt  (+8 more)
data/evaluation_results/: comparison_report.txt  comparison_report_20260226_190914.txt  comparison_report_20260226_213639.txt  comparison_report_20260226_234143.txt  results_20260226_041901.json  results_full_20260226_190914.json  results_full_20260226_213639.json  results_full_20260226_234143.json
scripts/: convert_to_pdf.py
